# ai-resume-agent

./: .env  .env.example  main.py  pyproject.toml
backend/: app.py  config.py  exceptions.py  logger.py  models.py  prompts.py
backend/prompts/: __init__.py  nutritionist.py  resume_assistant.py
backend/routes/: __init__.py  chat.py  thread.py  vector.py
backend/services/: __init__.py  agent.py  thread.py  user.py  vector.py
backend/sql/: init_tables.sql
backend/tests/: test_history.py
data/: sample.md
data/个人信息/: 个人信息.md
data/个人技能/: 技能.md
data/工作经历/: 工作经历.md
data/教育经历/: 全部教育经历.md
data/证书/: 全部证书.md
data/项目经历/: AI-Agent.md  低代码平台.md  智慧社区门禁.md  监狱pass应用平台.md  统一身份平台.md  综合物流信息平台.md  项目汇总.md
frontend/: index.html
src/backend/: app.py
src/frondend/: index.html  vue3.js
